# qenetics

./: .gitignore  pyproject.toml
config/: deepcpg.json
notebooks/: train_qcpg_circuit.ipynb
notebooks/data/: sequences.csv
scripts/: analyze_experiments.py  convert_methylation.py  create_h5_samples.py  extract_save_methylation_sequences.py  train_qcpg_model.py
scripts/deepcpg/: aggregate_methylations.py  convert_single_experiment.py  create_samples.py  methylation_to_deepcpg.py  train_dna.py
src/qenetics/deepcpg/: deepcpg_utils.py  metrics.py  models.py  train.py
src/qenetics/qcpg/: qcpg.py  qcpg_models.py
src/qenetics/tools/: analysis.py  converters.py  cpg_sampler.py  data.py  deepcpg_utils.py  dna.py  methylation.py  metrics.py
tests/: conftest.py  test_qcpg.py  test_qcpg_models.py
tests/deepcpg/: test_deepcpg_utils.py
tests/test_files/: test_deepcpg_input.h5  test_input_data.csv  test_methylation_profile.cov.txt  test_methylation_profile.tsv  test_sequence.fa  test_tengenomics_data.fa
tests/test_files/test_dataset/: chr2.h5
tests/test_files/test_qcpg_amplitude_dataset/: chrX.h5
tests/test_files/test_qcpg_dataset/: chrX.h5
tests/test_files/test_single_amplitude_dataset/: chr1.h5
tests/test_files/test_single_experiment_dataset/: chr2.h5
tests/tools/: test_analysis.py  test_converters.py  test_cpg_sampler.py  test_data.py  test_dna.py  test_methylation.py
