[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="qenetics"
dynamic=["version"]
description="Quantum algorithms for genetic data machine learning models"
requires-python=">=3.11"
authors=[{name="Christopher Rector", email="chrisrector14@gmail.com"}]
dependencies=[
    "h5py",
    "jax",
    "keras",
    "numpy",
    "optax",
    "pennylane",
    "torch"
]


[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.dynamic.version]
attr = "qenetics.__version__"

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true